[gd_scene load_steps=2 format=3 uid="uid://dwqi32p3ht1by"]

[ext_resource type="Script" uid="uid://c6apg2ynhay8p" path="res://addons/godot_core_system/examples/scene_demo/scene_demo.gd" id="1_v8g4f"]

[node name="SceneDemo" type="Node2D"]
script = ExtResource("1_v8g4f")

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 53.0
offset_right = 200.0
offset_bottom = 79.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="PreloadStatus" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 46.0
grow_horizontal = 2
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scene1Button" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "场景1 (无转场)"

[node name="Scene2Button" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "场景2 (淡入淡出)"

[node name="Scene3Button" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "场景3 (滑动)"

[connection signal="pressed" from="UI/Buttons/Scene1Button" to="." method="_on_scene1_pressed"]
[connection signal="pressed" from="UI/Buttons/Scene2Button" to="." method="_on_scene2_pressed"]
[connection signal="pressed" from="UI/Buttons/Scene3Button" to="." method="_on_scene3_pressed"]
